--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ thingsvision==2.3.14
 transformers==4.26.1
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
+-i https://download.pytorch.org/whl/cu113
+torch==1.13.0+cu113
+-i https://download.pytorch.org/whl/cu113
+torchvision==0.14.1+cu113
+
