--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -59,6 +59,6 @@ RUN pip3 install fasttext==0.9.2 \
 
 # define environment variables
 RUN echo "EXPORT NATURALCOGSCI_ROOT=/home/NaturalCogSci" >> ~/.bashrc
-RUN echo "EXPORT NATURALCOGSCI_ROOT=/home/NaturalCogSci" >> ~/.Renvironment
+RUN echo "NATURALCOGSCI_ROOT=/home/NaturalCogSci" >> ~/.Renvironment
 
 WORKDIR /home
