description for settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -31,7 +31,7 @@ audience = Developers
 author = Can Demircan
 author_email = cdemircan@tutanota.com
 copyright = 2023 onwards, %(author)s
-description = Code for the NaturalCogSci project
+description = Code for the project Language Aligned Visual Representations Predict Human Behavior in Naturalistic Learning Tasks
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
